--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ="stylesheet" href="style.css" type="text/css">
     <link rel="icon" href="background-pattern.svg" type="image/x-icon">
+    <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script> 
     <title>My crochet</title>
 </head>
 <body>
@@ -60,8 +61,17 @@
             </div>
         </div>
     </div>
-    <script>
+    <model-viewer src="scene.gltf" alt="A 3D model of a car" show-intensity="1" camera-controls auto-rotate ar>
+    </model-viewer>
+    
+    <script type="module"
+        src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+    </script>
 
+    <script nomodule
+        src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js">
+    </script>
+    <script>
         //JavaScript ////////////////////////////////////////////////////////////////////////////////////////////////
         var imageArray = [ 
             "1.png",
